a few more slides

--- a/public/slides.html
+++ b/public/slides.html
@@ -58,11 +58,44 @@
           <ul>
           	<li><a href="https://jwillesen.gitbooks.io/everyday-depression/content/">Text</a>: https://jwillesen.gitbooks.io/everyday-depression/content/</li>
           	<li><a href="https://jwillesen.gitbooks.io/everyday-depression/content/">Slides</a>: https://jwillesen.github.io/everyday-depression/</li>
+          	<li><a href="https://github.com/jwillesen/everyday-depression">Source</a>: https://github.com/jwillesen/everyday-depression
           </ul>
         </section>
 
-      </div>
+        <section>
+        	<h2>Statistics About Depression</h2>
+          <ul>
+            <li>Affects 14.8 million American adults (6.7%)</li>
+            <li>Responsible for 20,000 suicides per year
+              <ul><li>(about two-thirds of all suicides)</li></ul>
+            </li>
+            <li>9.8 million people aren't getting treatment</li>
+            <li>80% of people who do get treated show improvement</li>
+          </ul>
+        </section>
 
+        <section>
+          <h2>Relevance?</h2>
+          <ul>
+            <li>Correlation betwen intelligence and depression? Maybe.</li>
+            <li>Utah has higher prevalence of mental illness</li>
+            <!-- <img width='200' height='auto' src='images/utah.jpg' alt='picture of Utah' /> -->
+            <!-- <img src='images/depressed_emoji.jpg' alt='depressed emoji image' /> -->
+          </ul>
+        </section>
+
+        <section>
+          <img src='images/sptownsend.jpg' alt='picture of Steven Townsend' />
+          <p><small>Steven Townsend</small></p>
+        </section>
+
+        <section>
+          <h2>Disorder as a Disability</h2>
+          <h3>Is it also a handicap?</h3>
+
+        </section>
+
+      </div>
     </div>
 
     <script src="reveal/lib/js/head.min.js"></script>
