start replacing slide text with images

--- a/public/slides.html
+++ b/public/slides.html
@@ -76,12 +76,12 @@
 
         <section>
           <h2>Relevance?</h2>
-          <ul>
-            <li>Correlation betwen intelligence and depression? Maybe.</li>
-            <li>Utah has higher prevalence of mental illness</li>
-            <!-- <img width='200' height='auto' src='images/utah.jpg' alt='picture of Utah' /> -->
-            <!-- <img src='images/depressed_emoji.jpg' alt='depressed emoji image' /> -->
-          </ul>
+          <img class='fragment' data-fragment-index='1' src='images/late_night_programmer.jpg' alt='picture of a progammer coding at 4:00 am' height='230' />
+          <img class='fragment' data-fragment-index='3'src='images/sad_utah.png' alt='picture of Utah with a sad face' height='230' />
+          <div class='fragment' data-fragment-index='2' style='display: flex; justify-content: center; align-items: center'>
+            <img src='images/sad_and_intelligent.png' alt='funny hand drawn graph correlating happiness and IQ' />
+            <span style='padding-left: 20px; font-size: 5em'>?</span>
+          </div>
         </section>
 
         <section>
@@ -90,9 +90,18 @@
         </section>
 
         <section>
-          <h2>Disorder as a Disability</h2>
-          <h3>Is it also a handicap?</h3>
+          <h2>Disability or Disorder ≠ Handicap</h2>
+          <img class='fragment' src='images/traditional-handicap.png' alt='traditional handicap sign' height='300' />
+          <img class='fragment' src='images/new-disabled.png' alt='speedy wheelchair sign' height='300' />
+        </section>
 
+        <section>
+          <h2>Is Depression a Handicap?</h2>
+          <div style='position: relative'>
+            <img style='position: relative; top: 0; right: 0' class='fragment current-visible fade-out' src='images/lack_of_motivation.jpg' alt="From the movie Office Space: It's not that I'm lazy, it's that I just don't care." />
+            <img style='position: absolute; top: 0; bottom: 0; left: 0; right: 0; margin: 0 auto' class='fragment current-visible fade-out' src='images/lack_of_passion.jpg' alt="From Darth Vader: I find your lack of passion disturbing." />
+            <img style='position: absolute; top: 0; bottom: 0; left: 0; right: 0; margin: 0 auto' class='fragment current-visible fade-out' src='images/lack_of_pride.jpg' alt="Pride: Sometimes it's a luxury that a little weiner dog just can't afford." />
+          </div>
         </section>
 
       </div>
