added CNAME file and changed urls

--- a/public/slides.html
+++ b/public/slides.html
@@ -56,8 +56,8 @@
         <section>
           <h2>Find this talk online</h2>
           <ul>
-          	<li><a href="https://jwillesen.gitbooks.io/everyday-depression/content/">Text</a>: https://jwillesen.gitbooks.io/everyday-depression/content/</li>
-          	<li><a href="https://jwillesen.gitbooks.io/everyday-depression/content/">Slides</a>: https://jwillesen.github.io/everyday-depression/</li>
+          	<li><a href="https://talk.everyday-depression.life">Text</a>: https://talk.everyday-depression.life</li>
+          	<li><a href="https://slides.everyday-depression.life">Slides</a>: https://slides.everyday-depression.life</li>
           	<li><a href="https://github.com/jwillesen/everyday-depression">Source</a>: https://github.com/jwillesen/everyday-depression
           </ul>
         </section>
@@ -90,7 +90,7 @@
         </section>
 
         <section>
-          <h2>Disability or Disorder ≠ Handicap</h2>
+          <h2>Disability / Disorder ≠ Handicap</h2>
           <img class='fragment' src='images/traditional-handicap.png' alt='traditional handicap sign' height='300' />
           <img class='fragment' src='images/new-disabled.png' alt='speedy wheelchair sign' height='300' />
         </section>
