add required closing tag

--- a/public/slides.html
+++ b/public/slides.html
@@ -58,7 +58,7 @@
           <ul>
             <li><a href="https://talk.everyday-depression.life">Text</a>: https://talk.everyday-depression.life</li>
             <li><a href="https://slides.everyday-depression.life">Slides</a>: https://slides.everyday-depression.life</li>
-            <li><a href="https://github.com/jwillesen/everyday-depression">Source</a>: https://github.com/jwillesen/everyday-depression
+            <li><a href="https://github.com/jwillesen/everyday-depression">Source</a>: https://github.com/jwillesen/everyday-depression</li>
           </ul>
         </section>
 
