economic graph and additions, info reorg

--- a/public/slides.html
+++ b/public/slides.html
@@ -75,6 +75,11 @@
         </section>
 
         <section>
+          <h2>Presenteeism</h2>
+          <img src='images/economic-costs-graph.png' alt="depression cost is about $78 billion, diabetes cost is about $69 billion, asthma cost is about $56 billion" />
+        </section>
+
+        <section>
           <h2>Relevance?</h2>
           <img class='fragment' data-fragment-index='1' src='images/late_night_programmer.jpg' alt='picture of a progammer coding at 4:00 am' height='230' />
           <img class='fragment' data-fragment-index='3'src='images/sad_utah.png' alt='picture of Utah with a sad face' height='230' />
