3 more slides of pictures

--- a/public/slides.html
+++ b/public/slides.html
@@ -109,6 +109,23 @@
           </div>
         </section>
 
+        <section>
+          <img src='images/robin_williams.jpg' alt='Picture of Robin Williams, 1951 to 2014' />
+        </section>
+
+        <section>
+          <img src='images/jenny_lawson.jpg' alt='Picture of Jenny Lawson, the Bloggess' height='300' />
+          <img class='fragment' data-fragment-index='1' src='images/allie_brosh.png' alt='Picture of Allie Brosh, author of Hyperbole and a Half' height='300' />
+          <img class='fragment' data-fragment-index='1' src='images/clean_all_the_things.png' alt='Quote: I must clean all the things.' height='300' />
+          <img class='fragment' data-fragment-index='2' src='images/amy_bleuel.jpg' alt='Picture of Amy Bleuel, founder of Project Semicolon' height='275' />
+        </section>
+
+        <section>
+          <img src='images/fired.jpg' alt='picture of someone sad being fired from their job' height='250' />
+          <img class='fragment' src='images/flunking.jpg' alt='final grade: F' height='300' />
+          <img class='fragment' src='images/homer_kicked_out.jpg' alt='sun rising; still in bed' height='300'/>
+          <img class='fragment' src='images/in_bed.png' alt='sun rising; still in bed' height='300' />
+        </section>
       </div>
     </div>
 
