editing, more slides

--- a/public/slides.html
+++ b/public/slides.html
@@ -126,6 +126,36 @@
           <img class='fragment' src='images/homer_kicked_out.jpg' alt='sun rising; still in bed' height='300'/>
           <img class='fragment' src='images/in_bed.png' alt='sun rising; still in bed' height='300' />
         </section>
+
+        <section>
+          <h2>Mindset</h2>
+          <div class='fragment'>
+            <p style='text-align: left; padding-left: 150px'>"Are you going to your classes?"</p>
+            <p style='text-align: left; padding-left: 150px'>"Yes."</p>
+            <p style='text-align: left; padding-left: 150px'>"Are you keeping up with your reading?"</p>
+            <p style='text-align: left; padding-left: 150px'>"Yes."</p>
+            <p style='text-align: left; padding-left: 150px'>"Are you doing ok on your exams?"</p>
+            <p style='text-align: left; padding-left: 150px'>"Yes."</p>
+          </div>
+          <p class='fragment' style='text-align: left; padding-left: 150px'>"Well, then you're not depressed."</p>
+        </section>
+
+        <section>
+          <img src='images/spectrum.jpg' alt="image of a color spectrum" height='300' />
+          <br/>
+          <img class='fragment' src='images/wheaton_tabletop.jpg' alt="Wil Wheaton" />
+        </section>
+
+        <section>
+          <img src='images/wheaton_gloom.jpg' alt="Wil Wheaton holding the game Gloom" />
+          <div style='text-align: left'>
+            <p>"I suffered for no good reason for <em>decades</em>, until I couldn’t reconcile my awesome life with feeling terrible all the time."</p>
+            <p>"It’s like I was in a loud room for so long, I didn’t know how loud it was."</p>
+            <p style='text-align: right'><small>- emphasis added</small></p>
+          </div>
+        </section>
+
+
       </div>
     </div>
 
