--- a/public/slides.html
+++ b/public/slides.html
@@ -155,6 +155,36 @@
           </div>
         </section>
 
+        <section>
+          <h2>First Episode</h2>
+          <div style='display: flex' />
+            <div style="text-align: left">
+              <p class='fragment'>"Have you been thinking about suicide?"</p>
+              <p class='fragment'>"Not seriously."</p>
+            </div>
+            <img class='fragment' style='float: right' src='images/gun_closet.jpg' alt='gun closet' width='350' height='500' />
+          </div>
+        </section>
+
+        <section>
+          <h2>Junior High</h2>
+          <img class='fragment' src='images/bully.jpg' alt='bully making fun of a child' height='250' />
+          <br/>
+          <img class='fragment' src='images/funeral.jpg' alt='family mourning at a funeral' height='250' />
+        </section>
+
+        <section>
+          <h2>Life After Junior High</h2>
+          <img class='fragment' src='images/high_school.jpg' alt='studying in high school' height='200' />
+          <img class='fragment' src='images/uofu.jpg' alt='University of Utah logo' height='200' />
+          <img class='fragment' src='images/late_night_programmer.jpg' alt='Programmer' height='200' />
+          <img class='fragment' src='images/wedding.jpg' alt='University of Utah logo' height='300' />
+        </section>
+
+        <section>
+          <h2>Unprepared</h2>
+          <img class='fragment' src='images/andrew.jpg' alt='Our first child looking surprised.' height='500' />
+        </section>
 
       </div>
     </div>
