even more slides

--- a/public/slides.html
+++ b/public/slides.html
@@ -186,6 +186,20 @@
           <img class='fragment' src='images/andrew.jpg' alt='Our first child looking surprised.' height='500' />
         </section>
 
+        <section>
+          <img src='images/stress_chart.png' alt='chart showing stress increasing and mood declining' height='300' />
+          <img class='fragment' src='images/stressed_father.jpg' alt='stressed out father with crying baby' height='300' />
+        </section>
+
+        <section>
+          <img src='images/three_children.jpg' alt='my three children' />
+        </section>
+
+        <section>
+          <img src='images/hate_my_job.jpg' alt='professional man with his head in his hand' />
+          <img class='fragment' src='images/angry_man.jpg' alt='angry man face' height='300' />
+        </section>
+
       </div>
     </div>
 
