slides and edits

--- a/public/slides.html
+++ b/public/slides.html
@@ -200,6 +200,60 @@
           <img class='fragment' src='images/angry_man.jpg' alt='angry man face' height='300' />
         </section>
 
+        <section>
+          <h2>Symptoms</h2>
+          <ul style='font-size: smaller'>
+            <li>Persistent sad, anxious, or <span class='fragment highlight-red' data-fragment-index='1'>"empty" feelings</span></li>
+            <li><span class='fragment highlight-red' data-fragment-index='1'>Feelings of hopelessness or pessimism</span></li>
+            <li><span class='fragment highlight-red' data-fragment-index='1'>Feelings of guilt, worthlessness, or helplessness</span></li>
+            <li><span class='fragment highlight-red' data-fragment-index='1'>Irritability, restlessness</span></li>
+            <li><span class='fragment highlight-red' data-fragment-index='1'>Loss of interest in activities or hobbies once pleasurable</span>, including sex</li>
+            <li>Fatigue and decreased energy</li>
+            <li><span class='fragment highlight-red' data-fragment-index='1'>Difficulty concentrating</span>, remembering details, and making decisions</li>
+            <li><span class='fragment highlight-red' data-fragment-index='1'>Insomnia, early-morning wakefulness, or excessive sleeping</span></li>
+            <li>Overeating, or appetite loss</li>
+            <li><span class='fragment highlight-red' data-fragment-index='1'>Thoughts of suicide</span>, suicide attempts</li>
+            <li><span class='fragment highlight-red' data-fragment-index='1'>Aches or pains, headaches</span>, cramps, or digestive problems that do not ease even with treatment.</li>
+          </ul>
+        </section>
+
+        <section>
+          <img src="images/collection.jpg" alt="large shelves full of boardgames" height='600'>
+        </section>
+
+        <section>
+          <img src="images/blackhole.jpg" alt="black hole" />
+        </section>
+
+        <section>
+          <h2>Life Plan</h2>
+          <ul>
+            <li>Work and raise children</li>
+            <li class='fragment'>Go die in a ditch</li>
+          </ul>
+        </section>
+
+        <section>
+          <img src="images/sunrise.png" alt="sunrise over a grassy field" />
+        </section>
+
+        <section>
+          <img src="images/implosion.jpg" alt="glass shattering" />
+        </section>
+
+        <section>
+          <img src="images/sisyphus.jpg" alt="sisyphus pushing his boulder up the hill" />
+        </section>
+
+        <section>
+          <h2 class='fragment' data-fragment-index='1'>You're a good dad<span class='fragment' data-fragment-index='2'>, even though you don't smile very much.</span></h2>
+          <p class='fragment' data-fragment-index='2' style='text-align: right'><small>- Andrew Willesen</small></p>
+        </section>
+
+        <section>
+          <img src='images/depression_pit.jpg' alt='working at the bottom of a pit' />
+        </section>
+
       </div>
     </div>
 
