fixed meta and links

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
 
     <title>Everyday Depression</title>
 
-    <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-    <meta name="author" content="Hakim El Hattab">
+    <meta name="description" content="Slides for the talk Everyday Depression">
+    <meta name="author" content="Jon Willesen">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -56,9 +56,9 @@
         <section>
           <h2>Find this talk online</h2>
           <ul>
-            <li><a href="https://talk.everyday-depression.life">Text</a>: https://talk.everyday-depression.life</li>
-            <li><a href="https://slides.everyday-depression.life">Slides</a>: https://slides.everyday-depression.life</li>
-            <li><a href="https://github.com/jwillesen/everyday-depression">Source</a>: https://github.com/jwillesen/everyday-depression</li>
+            <li><a href="http://talk.everyday-depression.life">Text</a>: http://talk.everyday-depression.life</li>
+            <li><a href="http://slides.everyday-depression.life">Slides</a>: http://slides.everyday-depression.life</li>
+            <li><a href="http://source.everyday-depression.life">Source</a>: http://source.everyday-depression.life</li>
           </ul>
         </section>
 
