slides to conclusion and edits

--- a/public/index.html
+++ b/public/index.html
@@ -178,7 +178,7 @@
           <img class='fragment' src='images/high_school.jpg' alt='studying in high school' height='200' />
           <img class='fragment' src='images/uofu.jpg' alt='University of Utah logo' height='200' />
           <img class='fragment' src='images/late_night_programmer.jpg' alt='Programmer' height='200' />
-          <img class='fragment' src='images/wedding.jpg' alt='University of Utah logo' height='300' />
+          <img class='fragment' src='images/wedding.jpg' alt='One of my wedding photos' height='300' />
         </section>
 
         <section>
@@ -218,7 +218,11 @@
         </section>
 
         <section>
-          <img src="images/collection.jpg" alt="large shelves full of boardgames" height='600'>
+          <img src="images/father_yelling_at_son.jpg" alt="Father yelling at his son" height='600'/>
+        </section>
+
+        <section>
+          <img src="images/collection.jpg" alt="large shelves full of boardgames" height='600' />
         </section>
 
         <section>
@@ -246,6 +250,10 @@
         </section>
 
         <section>
+          <img src="images/kaylin_baby.jpg" alt="My baby daughter, smiling on a bed of flowers" />
+        </section>
+
+        <section>
           <h2 class='fragment' data-fragment-index='1'>
             You're a good dad<span class='fragment' data-fragment-index='2'>, even though you don't smile very much.</span>
           </h2>
@@ -255,7 +263,78 @@
         </section>
 
         <section>
-          <img src='images/depression_pit.jpg' alt='working at the bottom of a pit' />
+          <img src='images/depression_pit.jpg' alt='working at the bottom of a pit' height='400' />
+          <p style='font-size: 5em'>
+            <span class='fragment'>?</span>
+            <span class='fragment'>$</span>
+          </p>
+        </section>
+
+        <section>
+          <img src='images/nervous_scrat.jpg' alt='Scrat from Ice Age, screaming as he falls from space' />
+        </section>
+
+        <section>
+          <img src='images/simplicity.jpg' alt='A single rock at rest' />
+        </section>
+
+        <section>
+          <img src='images/pills.jpg' alt='A pile pills' />
+        </section>
+
+        <section>
+          <img src='images/father_talking_nicely.jpg' alt='A father talking pleasantly with his son' />
+        </section>
+
+        <section>
+          <img src='images/sigh_emoji.png' alt='a sighing emoji' />
+        </section>
+
+        <section>
+          <img src='images/happy_sigh_emoji.png' alt='a happy sighing emoji' />
+        </section>
+
+        <section>
+          <h2>"Really? It made that big a difference?"</h2>
+          <h2 class='fragment' data-fragment-index='2'>"Boy, Dad sure is in a good mood today."</h2>
+          <p class='fragment' data-fragment-index='2' style='text-align: right'><small>
+            - Andrew Willesen
+          </small></p>
+        </section>
+
+        <section>
+          <img src="images/declining_mood.png" alt="Graph showing a declining mood over the summer" />
+        </section>
+
+        <section>
+          <img src="images/mountain_molehill.png" alt="Making a mountain out of a molehill" />
+        </section>
+
+        <section>
+          <h2>"Depression Lies"</h2>
+        </section>
+
+        <section>
+          <h2>"Would you call the doctor for me?"</h2>
+          <img src='images/pills.jpg' alt='A pile pills' />
+        </section>
+
+        <section>
+          <h2>Drama?</h2>
+          <img class='fragment' src='images/uofu.jpg' alt='University of Utah logo' height='250' />
+          <img class='fragment' src='images/wedding.jpg' alt='University of Utah logo' height='250' />
+          <br/>
+          <img class='fragment' src='images/late_night_programmer.jpg' alt='Programmer' height='250' />
+          <img class='fragment' src='images/wonderful_children.jpg' alt='my three children' height='250' />
+        </section>
+
+        <section>
+          <h2>1 (800) 273-8255</h2>
+          <h3>National Suicide Prevention Lifeline<h3>
+          <h2>Call 911</h2>
+          <h3>If there's a crisis</h3>
+          <br/>
+          <h2 class='fragment'>Thanks for Listening</h2>
         </section>
 
       </div>
