--- a/public/index.html
+++ b/public/index.html
@@ -83,12 +83,12 @@
 
         <section>
           <h2>Relevance?</h2>
-          <img class='fragment' data-fragment-index='1' src='images/late_night_programmer.jpg' alt='picture of a progammer coding at 4:00 am' height='230' />
-          <img class='fragment' data-fragment-index='3'src='images/sad_utah.png' alt='picture of Utah with a sad face' height='230' />
-          <div class='fragment' data-fragment-index='2' style='display: flex; justify-content: center; align-items: center'>
+          <div class='fragment' style='display: flex; justify-content: center; align-items: center'>
             <img src='images/sad_and_intelligent.png' alt='funny hand drawn graph correlating happiness and IQ' />
             <span style='padding-left: 20px; font-size: 5em'>?</span>
           </div>
+          <img class='fragment' src='images/late_night_programmer.jpg' alt='picture of a progammer coding at 4:00 am' height='230' />
+          <img class='fragment' src='images/sad_utah.png' alt='picture of Utah with a sad face' height='230' />
         </section>
 
         <section>
@@ -305,6 +305,10 @@
         </section>
 
         <section>
+          <img src='images/genetics.jpg' alt='DNA' height='500' />
+        </section>
+
+        <section>
           <img src="images/declining_mood.png" alt="Graph showing a declining mood over the summer" />
         </section>
 
@@ -318,7 +322,7 @@
 
         <section>
           <h2>"Would you call the doctor for me?"</h2>
-          <img src='images/pills.jpg' alt='A pile pills' />
+          <img class='fragment' src='images/pills.jpg' alt='A pile pills' />
         </section>
 
         <section>
@@ -337,6 +341,10 @@
           <h3>If there's a crisis</h3>
           <br/>
           <h2 class='fragment'>Thanks for Listening</h2>
+        </section>
+
+        <section>
+          <h2>Questions?</h2>
         </section>
 
       </div>
