more edits found while practicing

--- a/public/index.html
+++ b/public/index.html
@@ -257,7 +257,7 @@
 
         <section>
           <h2 class='fragment' data-fragment-index='1'>
-            You're a good dad<span class='fragment' data-fragment-index='2'>, even though you don't smile very much.</span>
+            "You're a good dad<span class='fragment' data-fragment-index='2'>, even though you don't smile very much."</span>
           </h2>
           <p class='fragment' data-fragment-index='2' style='text-align: right'><small>
             - Andrew Willesen
